Add regional admin claims and permissions
