# app/Models/User.php
@@ -19,6 +19,8 @@ class User extends Authenticatable
         'password',
         'role',
         'compania_id',
+        'ciudad',
+        'permisos',
     ];
 
     protected $hidden = [
@@ -41,6 +43,7 @@ class User extends Authenticatable
         return [
             'email_verified_at' => 'datetime',
             'password' => 'hashed',
+            'permisos' => 'array',
         ];
     }
 }
